--- a/index.html
+++ b/index.html
@@ -27,20 +27,54 @@
         </div>
     </section>
     <section class="header">
-        <div class="top-bar">
-            <div class="search">Searchbar Placeholder</div>
-            <div class="user">
-                <div class="notifications">Notifications Icon</div>
-                <div class="profile">User Profile Icon</div>
-            </div>
-
+        <div class="search">
+            <div class="img">Placeholder</div>
+            <div class="search-bar">Search bar</div>
         </div>
-        <div class="bot-bar">
-
+        <div class="user">
+            <div class="notifications">Notifications Icon</div>
+            <div class="profile">User Profile Icon</div>
+            <div class="name">Morgan Oakley</div>
+        </div>
+        <div class="user-greeting">
+            <div class="img">placeholder</div>
+            <div class="name-box">
+                <div class="greeting">Hi there,</div>
+                <div class="name">Morgan Oakley (@morgan)</div>
+            </div>
+        </div>
+        <div class="buttons">
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
         </div>
     </section>
     <section class="content">
-a
+        <div class="titles">
+            <div>Your Projects</div>
+            <div>Announcements</div>
+        </div>
+        <div class="projects">
+            <div class="project">1</div>
+            <div class="project">2</div>
+            <div class="project">3</div>
+            <div class="project">4</div>
+            <div class="project">5</div>
+            <div class="project">6</div>
+        </div>
+        <div class="side-content">
+            <div class="announcements">
+                <div class="announcement">1</div>
+                <div class="announcement">2</div>
+                <div class="announcement">3</div>
+            </div>
+            <div class="trending">
+                <div class="trend">1</div>
+                <div class="trend">2</div>
+                <div class="trend">3</div>
+                <div class="trend">4</div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
