--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="sidebar">
-        <div class="logo">Logo Placeholder</div>
+        <img class="dash" src="assets/dashboard.svg" alt="Dashboard">
         <div class="nav-top">
             <div class="home">Home</div>
             <div class="profile">Profile</div>
@@ -69,12 +69,16 @@
                 <div class="announcement">3</div>
             </div>
             <div class="trending">
-                <div class="trend">1</div>
-                <div class="trend">2</div>
-                <div class="trend">3</div>
-                <div class="trend">4</div>
+                <div>Trending</div>
+                <div class="trends">
+                    <div class="trend">1</div>
+                    <div class="trend">2</div>
+                    <div class="trend">3</div>
+                    <div class="trend">4</div>
+                </div>
             </div>
         </div>
+        <div class="footer"></div>
     </section>
 </body>
 </html>
