fonts, color, further formatting

--- a/index.html
+++ b/index.html
@@ -8,22 +8,27 @@
 </head>
 <body>
     <section class="sidebar">
-        <img class="dash" src="assets/dashboard.svg" alt="Dashboard">
+        <div class="dashboard">
+            <div class="dash">
+                <img src="assets/dashboard.svg" alt="Dashboard">
+                <div>Dashboard</div>
+            </div>
+            <div></div>
+        </div>
+        
         <div class="nav-top">
-            <div class="home">Home</div>
-            <div class="profile">Profile</div>
-            <div class="messages">Messages</div>
-            <div class="history">History</div>
-            <div class="task">Tasks</div>
-            <div class="communities">Communities</div>
-            <div class="settings">Settings</div>
-            <div class="support">Support</div>
-            <div class="privacy">Privacy</div>
+            <div class="home"><img src="assets/home.svg" alt="">Home</div>
+            <div class="profile"><img src="assets/profile.svg" alt="">Profile</div>
+            <div class="messages"><img src="assets/messages.svg" alt="">Messages</div>
+            <div class="history"><img src="assets/history.svg" alt="">History</div>
+            <div class="task"><img src="assets/tasks.svg" alt="">Tasks</div>
+            <div class="communities"><img src="assets/communities.svg" alt="">Communities</div>
         </div>
         <div class="nav-bot">
-            <div class="settings">Settings</div>
-            <div class="support">Support</div>
-            <div class="privacy">Privacy</div>
+            <div></div>
+            <div class="settings"><img src="assets/settings.svg" alt="">Settings</div>
+            <div class="support"><img src="assets/support.svg" alt="">Support</div>
+            <div class="privacy"><img src="assets/privacy.svg" alt="">Privacy</div>
         </div>
     </section>
     <section class="header">
