sidebar and header complete, maybe except some tweaking later

--- a/index.html
+++ b/index.html
@@ -10,42 +10,40 @@
     <section class="sidebar">
         <div class="dashboard">
             <div class="dash">
-                <img src="assets/dashboard.svg" alt="Dashboard">
-                <div>Dashboard</div>
+                <a href="index.html"><img src="assets/dashboard.svg" alt="Dashboard"><div>Dashboard</div></a>
             </div>
             <div></div>
         </div>
-        
         <div class="nav-top">
-            <div class="home"><img src="assets/home.svg" alt="">Home</div>
-            <div class="profile"><img src="assets/profile.svg" alt="">Profile</div>
-            <div class="messages"><img src="assets/messages.svg" alt="">Messages</div>
-            <div class="history"><img src="assets/history.svg" alt="">History</div>
-            <div class="task"><img src="assets/tasks.svg" alt="">Tasks</div>
-            <div class="communities"><img src="assets/communities.svg" alt="">Communities</div>
+            <a href="index.html"><div class="home"><img src="assets/home.svg" alt="">Home</div></a>
+            <a href="index.html"><div class="profile"><img src="assets/profile.svg" alt="">Profile</div></a>
+            <a href="index.html"><div class="messages"><img src="assets/messages.svg" alt="">Messages</div></a>
+            <a href="index.html"><div class="history"><img src="assets/history.svg" alt="">History</div></a>
+            <a href="index.html"><div class="task"><img src="assets/tasks.svg" alt="">Tasks</div></a>
+            <a href="index.html"><div class="communities"><img src="assets/communities.svg" alt="">Communities</div></a>
         </div>
         <div class="nav-bot">
             <div></div>
-            <div class="settings"><img src="assets/settings.svg" alt="">Settings</div>
-            <div class="support"><img src="assets/support.svg" alt="">Support</div>
-            <div class="privacy"><img src="assets/privacy.svg" alt="">Privacy</div>
+            <a href="index.html"><div class="settings"><img src="assets/settings.svg" alt="">Settings</div></a>
+            <a href="index.html"><div class="support"><img src="assets/support.svg" alt="">Support</div></a>
+            <a href="index.html"><div class="privacy"><img src="assets/privacy.svg" alt="">Privacy</div></a>
         </div>
     </section>
     <section class="header">
         <div class="search">
-            <div class="img">Placeholder</div>
-            <div class="search-bar">Search bar</div>
+            <a href="index.html"><img src="assets/search.svg" alt="search"></a>
+            <input type="text"></div>
         </div>
         <div class="user">
-            <div class="notifications">Notifications Icon</div>
-            <div class="profile">User Profile Icon</div>
-            <div class="name">Morgan Oakley</div>
+            <a href="index.html"><img src="assets/notification.svg" alt="notifications"></a>
+            <a href="index.html"><img class="profile-pic" src="assets/profile-pic.svg" alt="profile picture"></a>
+            <div class="name">Aceus</div>
         </div>
         <div class="user-greeting">
-            <div class="img">placeholder</div>
+            <img class="profile-pic" src="assets/profile-pic.svg" alt="profile picture">
             <div class="name-box">
                 <div class="greeting">Hi there,</div>
-                <div class="name">Morgan Oakley (@morgan)</div>
+                <div class="name">Aceus (@aceus)</div>
             </div>
         </div>
         <div class="buttons">
