--- a/index.html
+++ b/index.html
@@ -54,16 +54,40 @@
     </section>
     <section class="content">
         <div class="titles">
-            <div>Your Projects</div>
-            <div>Announcements</div>
+            <div class="title1">Your Projects</div>
+            <div class="title2">Announcements</div>
         </div>
         <div class="projects">
-            <div class="project">1</div>
-            <div class="project">2</div>
-            <div class="project">3</div>
-            <div class="project">4</div>
-            <div class="project">5</div>
-            <div class="project">6</div>
+            <div class="project">
+                <div class="title">Project 1</div>
+                <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                <div class="controls">...</div>
+            </div>
+            <div class="project">
+                <div class="title">Project 2</div>
+                <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                <div class="controls">...</div>
+            </div>
+            <div class="project">
+                <div class="title">Project 3</div>
+                <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                <div class="controls">...</div>
+            </div>
+            <div class="project">
+                <div class="title">Project 4</div>
+                <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                <div class="controls">...</div>
+            </div>
+            <div class="project">
+                <div class="title">Project 5</div>
+                <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                <div class="controls">...</div>
+            </div>
+            <div class="project">
+                <div class="title">Project 6</div>
+                <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                <div class="controls">...</div>
+            </div>
         </div>
         <div class="side-content">
             <div class="announcements">
@@ -72,7 +96,7 @@
                 <div class="announcement">3</div>
             </div>
             <div class="trending">
-                <div>Trending</div>
+                <div class="trending-header">Trending</div>
                 <div class="trends">
                     <div class="trend">1</div>
                     <div class="trend">2</div>
