Finsihed off styling and make a few tweaks. May revist laster to fix img placeholder in Trending

--- a/index.html
+++ b/index.html
@@ -61,47 +61,104 @@
             <div class="project">
                 <div class="title">Project 1</div>
                 <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-                <div class="controls">...</div>
+                <div class="controls">
+                    <img src="assets/star.svg" alt="star">
+                    <img src="assets/watch.svg" alt="watch">
+                    <img src="assets/fork.svg" alt="fork">
+                </div>
             </div>
             <div class="project">
                 <div class="title">Project 2</div>
                 <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-                <div class="controls">...</div>
+                <div class="controls">
+                    <img src="assets/star.svg" alt="star">
+                    <img src="assets/watch.svg" alt="watch">
+                    <img src="assets/fork.svg" alt="fork">
+                </div>
             </div>
             <div class="project">
                 <div class="title">Project 3</div>
                 <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-                <div class="controls">...</div>
+                <div class="controls">
+                    <img src="assets/star.svg" alt="star">
+                    <img src="assets/watch.svg" alt="watch">
+                    <img src="assets/fork.svg" alt="fork">
+                </div>
             </div>
             <div class="project">
                 <div class="title">Project 4</div>
                 <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-                <div class="controls">...</div>
+                <div class="controls">
+                    <img src="assets/star.svg" alt="star">
+                    <img src="assets/watch.svg" alt="watch">
+                    <img src="assets/fork.svg" alt="fork">
+                </div>
             </div>
             <div class="project">
                 <div class="title">Project 5</div>
                 <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-                <div class="controls">...</div>
+                <div class="controls">
+                    <img src="assets/star.svg" alt="star">
+                    <img src="assets/watch.svg" alt="watch">
+                    <img src="assets/fork.svg" alt="fork">
+                </div>
             </div>
             <div class="project">
                 <div class="title">Project 6</div>
                 <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-                <div class="controls">...</div>
+                <div class="controls">
+                    <img src="assets/star.svg" alt="star">
+                    <img src="assets/watch.svg" alt="watch">
+                    <img src="assets/fork.svg" alt="fork">
+                </div>
             </div>
         </div>
         <div class="side-content">
             <div class="announcements">
-                <div class="announcement">1</div>
-                <div class="announcement">2</div>
-                <div class="announcement">3</div>
+                <div class="announcement">
+                    <div class="atitle">Announcement</div>
+                    <div class="adesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                </div>
+                <div class="announcement">
+                    <div class="atitle">Announcement</div>
+                    <div class="adesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                </div>
+                <div class="announcement">
+                    <div class="atitle">Announcement</div>
+                    <div class="adesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                </div>
             </div>
             <div class="trending">
                 <div class="trending-header">Trending</div>
                 <div class="trends">
-                    <div class="trend">1</div>
-                    <div class="trend">2</div>
-                    <div class="trend">3</div>
-                    <div class="trend">4</div>
+                    <div class="trend">
+                        <div class="tprofile">img</div>
+                        <div class="updown">
+                            <div class="tuser">@aceus</div>
+                            <div class="tdesc">Lorem ipsum dolor</div>
+                        </div>
+                    </div>
+                    <div class="trend">
+                        <div class="tprofile">img</div>
+                        <div class="updown">
+                            <div class="tuser">@aceus</div>
+                            <div class="tdesc">Lorem ipsum dolor</div>
+                        </div>
+                    </div>    
+                    <div class="trend">
+                        <div class="tprofile">img</div>
+                        <div class="updown">
+                            <div class="tuser">@aceus</div>
+                            <div class="tdesc">Lorem ipsum dolor</div>
+                        </div>
+                    </div>
+                    <div class="trend">
+                        <div class="tprofile">img</div>
+                        <div class="updown">
+                            <div class="tuser">@aceus</div>
+                            <div class="tdesc">Lorem ipsum dolor</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
